[oc] update from Pootle (firefox)

--- a/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -29,6 +29,8 @@ developer-button.label = Desvolopaire
 # LOCALIZATION NOTE(developer-button.tooltiptext): %S is the keyboard shortcut
 developer-button.tooltiptext = Aisinas de desvolopament web (%S)
 
+sidebar-button.label = Panèl lateral
+
 add-ons-button.label = Moduls complementaris
 # LOCALIZATION NOTE(add-ons-button.tooltiptext2): %S is the keyboard shortcut
 add-ons-button.tooltiptext2 = Dobrir lo gestionari de moduls complementaris (%S)
