--- a/browser/chrome/browser/devtools/gcli.properties
+++ b/browser/chrome/browser/devtools/gcli.properties
@@ -53,6 +53,8 @@ cliOptions=Opcions disponiblas
 # isn't registered
 cliUnknownCommand=Comanda invalida
 
+# LOCALIZATION NOTE: A parameter should have a value, but doesn't
+
 # LOCALIZATION NOTE: Error message given when a file argument points to a file
 # that does not exist, but should (e.g. for use with File->Open) %1$S is a
 # filename
@@ -151,10 +153,9 @@ helpManual=Provesís d'ajuda sus una comanda especifica (se una cadena de recerc
 helpSearchDesc=Recercar una cadena
 helpSearchManual3=cadena de recèrca d'utilizar per redusir lo nombre de comandas afichadas. Las expressions regularas son pas geridas.
 
-# LOCALIZATION NOTE (helpManSynopsis, helpManDescription): These strings are
-# displayed in the help page for a command in the console.
+# LOCALIZATION NOTE: These strings are displayed in the help page for a
+# command in the console.
 helpManSynopsis=Sinòpsis
-helpManDescription=Descripcion
 
 # LOCALIZATION NOTE: This message is displayed in the help page if the command
 # has no parameters.
@@ -207,7 +208,7 @@ contextReply=%1$S es d'ara enlà utilizat coma prefixe de comanda
 contextEmptyReply=Cap de prefixe de comanda es pas definit
 
 # LOCALIZATION NOTE (connectDesc, connectManual, connectPrefixDesc,
-# connectPortDesc, connectHostDesc, connectDupReply): These strings describe
+# connectMethodDesc, connectUrlDesc, connectDupReply): These strings describe
 # the 'connect' command and all its available parameters. A 'prefix' is an 
 # alias for the remote server (think of it as a "connection name"), and it
 # allows to identify a specific server when connected to multiple remote
@@ -215,7 +216,6 @@ contextEmptyReply=Cap de prefixe de comanda es pas definit
 connectDesc=Importar las comandas del servidor
 connectManual=Se connectar al servidor, crear una version locala de las comandas sul servidor. Las comandas distantas possedisson per defaut un prefixe per las diferenciar de las comandas localas — veire la comanda context per contornar l'utilizacion del prefixe.
 connectPrefixDesc=Lo prefixe parent per las comandas importadas
-connectPortDesc=Lo pòrt TCP d'escotar
 connectDupReply=Una connexion nomenada %S existís ja.
 
 # LOCALIZATION NOTE: The output of the 'connect' command, telling the user
@@ -241,6 +241,14 @@ disconnectReply=%S comanda(s) suprimida(s).
 # disconnect before all requests have completed. Parameters: %S is a list of
 # incomplete requests.
 disconnectOutstanding=Requèstas en cors (%S)
+
+# LOCALIZATION NOTE (globalDesc, globalWindowDesc, globalOutput): These
+# strings describe the 'global' command and its parameters
+
+# LOCALIZATION NOTE: These strings describe the 'clear' command
+
+# LOCALIZATION NOTE (langDesc, langOutput): These strings describe the 'lang'
+# command and its parameters
 
 # LOCALIZATION NOTE (prefDesc, prefManual, prefListDesc, prefListManual,
 # prefListSearchDesc, prefListSearchManual, prefShowDesc, prefShowManual,
@@ -303,11 +311,10 @@ prefOutputValue=Valor
 introDesc=Messatge de benvenguda
 introManual=Aficha lo messatge afichat als novèls utilizaires fins al moment que clicaràn sul boton « ai comprés ! »
 
-# LOCALIZATION NOTE (introTextOpening2, introTextCommands, introTextKeys2,
+# LOCALIZATION NOTE (introTextOpening3, introTextCommands, introTextKeys2,
 # introTextF1Escape, introTextGo): These strings are displayed when the user
 # first opens the developer toolbar to explain the command line, and is shown
 # each time it is opened until the user clicks the 'Got it!' button.
-introTextOpening2=La linha de comanda de Firefox es destinada als desvolopaires. Se concentra sus la velocitat de picada puslèu que non pas sus la sintaxi JavaScript e ofrís un afichatge ric puslèu que de talha fixa.
 introTextCommands=Per una lista de comandas, picatz
 introTextKeys2=o per afichar/amagar las informacions sus las comandas, quichar sus
 introTextF1Escape=F1/Escap
@@ -321,10 +328,6 @@ hideIntroDesc=Afichar lo messatge inicial de benvenguda
 # users to select between showing no tooltips, permanent tooltips, and only
 # important tooltips.
 eagerHelperDesc=Entosiasme de las bullas d'informacion
-
-# LOCALIZATION NOTE: This is a short description of the 'allowSetDesc'
-# setting.
-allowSetDesc=L'utilizaire a activat la comanda « pref set » ?
 
 # LOCALIZATION NOTE: This text is displayed at the top of the output for the
 # help command, just before the list of commands. This text is wrapped inside
