--- a/browser/chrome/browser/devtools/gclicommands.properties
+++ b/browser/chrome/browser/devtools/gclicommands.properties
@@ -1039,6 +1039,7 @@ jsbBraceStyleDesc2=Causir lo mòde d'afichatge de las acoladas
 # NOTES: The keywords collapse, expand, end-expand and expand-strict should not
 # be translated. "even if it will break your code" means that the resulting code
 # may no longer be functional.
+jsbBraceStyleManual2=Definir cossí plaçar las acoladas : collapse – plaça las acoladas sus la meteissa linha que las instruccions condicionalas ; expand – plaça las acoladas sus lor pròpria linha (style Allman/ANSI) ; end-expand – plaça las acoladas tampantas sus lor pròpria linha ; expand-strict – plaça las acoladas sus lor pròpria linha quitament se aquò pòt produsir d'errors.
 
 # LOCALIZATION NOTE (jsbNoSpaceBeforeConditionalDesc) A very short description
 # of the 'jsb <noSpaceBeforeConditional>' parameter. This string is designed to
