--- a/browser/metro/chrome/browser.properties
+++ b/browser/metro/chrome/browser.properties
@@ -39,8 +39,7 @@ contextAppbar2.clear=Anullar la seleccion
 # Clear private data
 clearPrivateData.clearButton=Netejar
 clearPrivateData.title2=Escafar mas traças
-# LOCALIZATION NOTE (clearPrivateData.message2): #1 is optionsCharm
-clearPrivateData.message2=Las donadas personalas seleccionadas dins #1 seràn escafadas definitivament.
+# LOCALIZATION NOTE (clearPrivateData.message3): "Options" is the optionsCharm.
 
 # Settings Charms
 aboutCharm1=A prepaus
@@ -137,15 +136,3 @@ opensearch.search.header=Recercar « %S » amb :
 # be displayed alongside of the button. The button when displayed is located
 # directly under the Firefox version in the about dialog (see bug 596813 for
 # screenshots).
-update.checkInsideButton.label=Recercar de mesas a jorn…
-update.checkInsideButton.accesskey=C
-update.resumeButton.label=Contunhar lo telecargament de %S…
-update.resumeButton.accesskey=D
-update.openUpdateUI.applyButton.label=Aplicar la mesa a jorn...
-update.openUpdateUI.applyButton.accesskey=A
-update.restart.updateButton.label=Reaviar per aplicar la mesa a jorn
-update.restart.updateButton.accesskey=R
-update.openUpdateUI.upgradeButton.label=Metre a jorn ara…
-update.openUpdateUI.upgradeButton.accesskey=M
-update.restart.upgradeButton.label=Metre a jorn ara
-update.restart.upgradeButton.accesskey=M
