--- a/browser/pdfviewer/viewer.properties
+++ b/browser/pdfviewer/viewer.properties
@@ -60,8 +60,11 @@ page_rotate_ccw_label=Rotacion antiorària
 hand_tool_enable.title=Activar l'aisina man
 hand_tool_enable_label=Activar l'aisina man
 hand_tool_disable.title=Desactivar l'aisina man
+hand_tool_disable_label=Desactivar l'aisina man
 
 # Document properties dialog box
+document_properties.title=Proprietats del document...
+document_properties_label=Proprietats del document...
 document_properties_file_name=Nom del fichièr :
 document_properties_file_size=Talha del fichièr :
 document_properties_kb={{size_kb}} Ko ({{size_b}} octets)
@@ -75,6 +78,8 @@ document_properties_modification_date=Data de modificacion :
 document_properties_date_string={{date}}, {{time}}
 document_properties_creator=Creator :
 document_properties_producer=Aisina de conversion PDF :
+document_properties_version=Version PDF :
+document_properties_page_count=Nombre de paginas :
 document_properties_close=Tampar
 
 # Tooltips and alt text for side panel toolbar buttons
@@ -145,8 +150,12 @@ missing_file_error=Fichièr PDF mancant.
 # the PDF spec (32000-1:2008 Table 169 – Annotation types).
 # Some common types are e.g.: "Check", "Text", "Comment", "Note"
 text_annotation_type.alt=[Anotacion {{type}}]
+password_label=Picatz lo senhal per dobrir aqueste fichièr PDF.
+password_invalid=Senhal incorrècte. Tornatz ensajar.
 password_ok=D'acòrdi
 password_cancel=Anullar
 
 printing_not_supported=Atencion : l'estampatge es pas completament gerit per aqueste navigador.
+printing_not_ready=Atencion : lo PDF es pas entièrament cargat per lo poder imprimir.
 web_fonts_disabled=Las poliças web son desactivadas : impossible d'utilizar las poliças integradas al PDF.
+document_colors_disabled=Los documents PDF pòdon pas utilizar lors pròprias colors : « Autorizar las paginas web d'utilizar lors pròprias colors » es desactivat dins lo navigador.
