--- a/dom/chrome/layout/css.properties
+++ b/dom/chrome/layout/css.properties
@@ -66,6 +66,8 @@ PEPseudoSelNotPE=Pseudoelement esperat, mas « %1$S » es estat trobat.
 PEPseudoSelDoubleNot=Una pseudoclassa de negacion pòt pas èsser negada « %1$S ».
 PEPseudoSelPEInNot=Los pseudoelements pòdon pas èsser negats « %1$S ».
 PEPseudoSelNewStyleOnly=Aqueste pseudoelement deu utilizar la forma « :: » : « %1$S ».
+PEPseudoSelEndOrUserActionPC=Fin de selector o pseudòclassa d'accion utilizaire esperat aprèp un pseudòelement mas pseudòclassa « %1$S » trobada.
+PEPseudoSelNoUserActionPC=Fin de selector esperat aprèp un pseudòelement que pren pas en carga las pseudòclassas d'accion utilizaire mas « %1$S » trobat.
 PEPseudoSelMultiplePE=Pseudoelement « %1$S » excedentari.
 PEPseudoSelUnknown=Pseudoclassa o pseudoelement « %1$S » desconegut.
 PENegationEOF=selector al sen d'una negacion
@@ -77,6 +79,7 @@ PEPseudoClassArgNotIdent=Identificant per paramètre de pseudoclassa esperat, ma
 PEPseudoClassArgNotNth=Argument per pseudoclassa esperat mas « %1$S » es estat trobat.
 PEPseudoClassNoClose=Parentèsi tampanta « ) » mancanta dins la pseudoclassa, « %1$S » es estat trobat a la plaça.
 PEPseudoClassNoArg=Argument mancant dins la pseudoclassa « %1$S ».
+PEPseudoClassNotUserAction=Fin de selector o pseudòclassa d'accion utilizaire esperat aprèp un pseudòelement que mas pseudòclassa « %1$S » trobada.
 PESelectorEOF=selector
 PEBadDeclBlockStart=Acolada « { » començant un blòt de declaracion esperada, mas « %1$S » es estat trobat.
 PEColorEOF=color
