--- a/dom/chrome/security/csp.properties
+++ b/dom/chrome/security/csp.properties
@@ -28,6 +28,8 @@ ignoringUnknownOption = L'opcion desconeguda « %1$S » es estada ignorada.
 # LOCALIZATION NOTE (reportURInotHttpsOrHttp2):
 # %1$S is the ETLD of the report URI that is not HTTP or HTTPS
 reportURInotHttpsOrHttp2 = L'URI del rapòrt (%1$S) deu èsser de tipe HTTP o HTTPS.
+# LOCALIZATION NOTE (reportURInotInReportOnlyHeader):
+# %1$S is the ETLD of the page with the policy
 # LOCALIZATION NOTE (pageCannotSendReportsTo):
 # %1$S is the URI of the page with the policy
 # %2$S is the report URI that could not be used
