--- a/webapprt/webapprt/overrides/appstrings.properties
+++ b/webapprt/webapprt/overrides/appstrings.properties
@@ -2,6 +2,17 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-netReset=La connexion amb lo servidor es estada reïnicializada pendent lo cargament de la pagina.
+malformedURI=L'URL es pas valida e pòt pas èsser cargada.
+dnsNotFound=%S could not be found. Please check the name and try again.
+connectionFailure=The connection was refused when attempting to contact %S.
+netInterrupt=The connection to %S has terminated unexpectedly. Some data may have been transferred.
+netTimeout=The operation timed out when attempting to contact %S.
 confirmRepostPrompt=Per contunhar, las informacions transmesas precedentament per l'aplicacion devon èsser renviadas. Aquò repetirà tota accion (tala coma una recèrca o un òrdre de crompa) entrepresa precedentament.
+resendButton.label=Resend
 unknownSocketType=L'aplicacion sap pas cossí entrar en contacte amb lo servidor.
+netReset=La connexion amb lo servidor es estada reïnicializada pendent lo cargament de la pagina.
+externalProtocolTitle=External Protocol Request
+externalProtocolPrompt=An external application must be launched to handle %1$S: links.\n\n\nRequested link:\n\n%2$S\n\nApplication: %3$S\n\n\nIf you were not expecting this request it may be an attempt to exploit a weakness in that other program. Cancel this request unless you are sure it is not malicious.\n
+#LOCALIZATION NOTE (externalProtocolUnknown): The following string is shown if the application name can't be determined
+malwareBlocked=The site at %S has been reported as an attack site and has been blocked based on your security preferences.
+phishingBlocked=Lo site Web sus %S es estat senhalat coma una contrafaiçon concebuda per enganar los utilizaires per que partejen d'informacions personalas o financièras.
