--- a/webapprt/webapprt/overrides/dom.properties
+++ b/webapprt/webapprt/overrides/dom.properties
@@ -41,6 +41,7 @@ FormValidationRangeUnderflow=Seleccionatz una valor qu'es superiora a %S.
 FormValidationStepMismatch=Seleccionatz una valor valida. Las doas valors validas las mai pròchas son %S e %S.
 # LOCALIZATION NOTE (FormValidationStepMismatchOneValue): %S can be a number, a date or a time. This is called instead of FormValidationStepMismatch when the second value is the same as the first.
 FormValidationStepMismatchOneValue=Seleccionatz una valor valida. La valor valida la mai pròcha es %S.
+FormValidationBadInputNumber=Picatz un nombre.
 GetAttributeNodeWarning=L'utilizacion de getAttributeNode() es obsolèta. Utilizatz getAttribute() a la plaça.
 SetAttributeNodeWarning=L'utilizacion de setAttributeNode() es obsolèta. Utilizatz setAttribute() a la plaça.
 GetAttributeNodeNSWarning=L'utilizacion de getAttributeNodeNS() es obsolèta. Utilizatz getAttributeNS() a la plaça.
@@ -70,6 +71,7 @@ FullScreenDeniedLostWindow=La requèsta d'accès a l'ecran complet es estada ref
 FullScreenDeniedSubDocFullScreen=La requèsta d'accès a l'ecran complet es estada refusada perque un sosdocument del document a l'origina de la requèsta es ja en ecran complet.
 FullScreenDeniedNotDescendant=La requèsta d'accès a l'ecran complet es estada refusada perque l'element a l'origina de la requèsta es pas pas un descendent de l'element en ecran complet actual.
 FullScreenDeniedNotFocusedTab=La requèsta d'accès a l'ecran complet es estada refusada perque l'element a l'origina de la requèsta es pas dins l'onglet seleccionat actualament.
+FullScreenDeniedContentOnly=La requèsta d'accès a l'ecran complet es estada refusada perque l'element a l'origina de la requèsta es dins lo document del chrome e que l'API ecran complet es configurada unicament pel contengut.
 RemovedFullScreenElement=Sortida del mòde ecran complet perque l'element ecran complet es estat suprimit del document.
 FocusedWindowedPluginWhileFullScreen=Sortida del mòde ecran complet perque un plugin fenestrat es estat seleccionat.
 HTMLSyncXHRWarning=L'analisi sintaxica del HTML dins XMLHttpRequest es pas gerida en mòde sincròn.
@@ -79,6 +81,7 @@ WithCredentialsSyncXHRWarning=L'utilizacion de l'atribut « withCredentials » d
 TimeoutSyncXHRWarning=L'utilizacion de l'atribut « timeout » dins XMLHttpRequest es pas mai gerida en mòde sincròn dins lo contèxte de fenèstra.
 JSONCharsetWarning=Una temptativa es estada facha per declarar un encodatge non UTF-8 per de JSON recuperat en utilizant XMLHttpRequest. Sol UTF-8 es gerit pel desencodatge de JSON.
 # LOCALIZATION NOTE: Do not translate AudioBufferSourceNode
+MediaBufferSourceNodeResampleOutOfMemory=Memòria insufisenta per rescandalhonar AudioBufferSourceNode per la lectura.
 # LOCALIZATION NOTE: Do not translate decodeAudioData.
 MediaDecodeAudioDataUnknownContentType=Las donadas passadas a decodeAudioData possedisson de contengut de tipe desconegut.
 # LOCALIZATION NOTE: Do not translate decodeAudioData.
@@ -107,8 +110,6 @@ DOMExceptionCodeWarning=L'utilizacion de l'atribut « code » de DOMException 
 NoExposedPropsWarning=L'exposicion d'objèctes JS chrome al contengut sens __exposedProps__ es pas segura e es obsolèta. Consultatz https://developer.mozilla.org/en/XPConnect_wrappers per mai d'informacions.
 # LOCALIZATION NOTE: Do not translate "Mutation Event" and "MutationObserver"
 MutationEventWarning=L'utilizacion dels « Mutation Events » es obsolèta. Utilizatz « MutationObserver » a la plaça.
-# LOCALIZATION NOTE: Do not translate "Blob", "mozSlice", or "slice"
-MozSliceWarning=L'utilizacion de mozSlice sus l'objècte Blob es obsolèta. Utilizatz slice a la plaça.
 # LOCALIZATION NOTE: Do not translate "Components"
 ComponentsWarning=L'objècte « Components » es obsolet. Serà lèu suprimit.
 PluginHangUITitle=Atencion : L'escript respond pas
@@ -118,8 +119,10 @@ PluginHangUIStopButton=Arrestar lo plugin
 # LOCALIZATION NOTE: Do not translate "mozHidden", "mozVisibilityState", "hidden", or "visibilityState"
 PrefixedVisibilityApiWarning=Las proprietats « mozHidden » e « mozVisibilityState » son obsolètas. Utilizatz las proprietats non prefixadas « hidden » e « visibilityState » a la plaça.
 # LOCALIZATION NOTE: Do not translate "NodeIterator" or "detach()".
+NodeIteratorDetachWarning=Apelar detach() sus un NodeIterator a pas mai cap d'efièch.
 # LOCALIZATION NOTE: Do not translate "Mozilla Audio Data API" and "Web Audio API".
 # LOCALIZATION NOTE: Do not translate "LenientThis" and "this"
+LenientThisWarning=Obtencion o definicion de las proprietats que possedisson [LenientThis] ignoradas perque l'objècte « this » es incorrècte.
 # LOCALIZATION NOTE: Do not translate "nsIDOMWindowUtils", "getWindowWithOuterId", or "nsIWindowMediator"
 # LOCALIZATION NOTE: Do not translate "getPreventDefault" or "defaultPrevented".
 # LOCALIZATION NOTE: Do not translate "getUserData", "setUserData", "WeakMap", or "element.dataset".
@@ -131,5 +134,7 @@ UseOfReleaseEventsWarning=L'utilizacion de la foncion « releaseEvents() » es
 # LOCALIZATION NOTE: Do not translate "document.load()" or "XMLHttpRequest"
 UseOfDOM3LoadMethodWarning=L'utilizacion de Document.load() es obsolèta. Per metre a jorn vòstre còde, utilizatz l'objècte DOM XMLHttpRequest. Consultar https://developer.mozilla.org/en/XMLHttpRequest per mai d'informacions
 # LOCALIZATION NOTE: Do not translate "window.showModalDialog()" or "window.open()" 
+ShowModalDialogWarning=L'utilizacion de « window.showModalDialog() » es obsolèta. Utilizar « window.open() » a la plaça. Consultar https://developer.mozilla.org/en-US/docs/Web/API/Window.open per mai d'informacions.
 # LOCALIZATION NOTE: Do not translate "window._content" or "window.content"
 Window_ContentWarning=« window._content » es obsolèt. Utilizatz « window.content » a la plaça.
+# LOCALIZATION NOTE: Do not translate "XMLHttpRequest"
