--- a/browser/chrome/browser/devtools/debugger.properties
+++ b/browser/chrome/browser/devtools/debugger.properties
@@ -77,6 +77,9 @@ noGlobalsText=Pas cap de variabla globala
 # when there are no scripts.
 noSourcesText=Aquesta pagina a pas cap de font.
 
+# LOCALIZATION NOTE (loadingSourcesText): The text to display in the sources menu
+# when waiting for scripts to load.
+
 # LOCALIZATION NOTE (noEventListenersText): The text to display in the events tab
 # when there are no events.
 noEventListenersText=Pas cap d'escotador d'eveniment d'afichar
@@ -103,6 +106,7 @@ eventOnSelector=lo
 
 # LOCALIZATION NOTE (eventInSource): The text to display in the events tab
 # for every event item, between the event selector and listener's owner source.
+eventInSource=dins
 
 # LOCALIZATION NOTE (eventNodes): The text to display in the events tab when
 # an event is listened on more than one target node.
