--- a/browser/chrome/browser/devtools/webconsole.properties
+++ b/browser/chrome/browser/devtools/webconsole.properties
@@ -26,8 +26,6 @@ tipMutation=Activa o desactiva la jornalizacion dels eveniments de mutacion DOM
 btnGlobal=Messatges globals
 tipGlobal=Activa o desactiva la jornalizacion dels messatges globals
 localConsole=Consòla locala
-clearConsoleCmd.label=Voidar la consòla
-clearConsoleCmd.accesskey=v
 close.button=Tampar
 close.accesskey=T
 update.button=Metre a jorn
@@ -119,11 +117,17 @@ timerStarted=%S : minutador aviat
 # is the number of milliseconds.
 timeEnd=%1$S: %2$Sms
 
+# LOCALIZATION NOTE (noCounterLabel): this string is used to display
+# count-messages with no label provided.
+
 # LOCALIZATION NOTE (Autocomplete.blank): this string is used when inputnode
 # string containing anchor doesn't matches to any property in the content.
 Autocomplete.blank=  <- pas cap de resultat
 
 maxTimersExceeded=Lo nombre maximal de minutadors permeses sus aquesta pagina es estat depassat.
+
+# LOCALIZATION NOTE (maxCountersExceeded): Error message shown when the maximum
+# number of console.count()-counters was exceeded.
 
 # LOCALIZATION NOTE (JSTerm.updateNotInspectable): this string is used when
 # the user inspects an evaluation result in the Web Console and tries the
@@ -171,6 +175,7 @@ longStringEllipsis=[…]
 
 # LOCALIZATION NOTE (longStringTooLong): the string displayed after the user
 # tries to expand a long string.
+longStringTooLong=La cadena qu'ensajatz d'afichar es tròp longa per èsser afichada per la consòla web.
 
 # LOCALIZATION NOTE (NetworkPanel.fetchRemainingResponseContentLink): the
 # string  displayed in the network panel when the response body is only
@@ -194,6 +199,7 @@ propertiesFilterPlaceholder=Proprietats del filtre
 
 # LOCALIZATION NOTE (emptyPropertiesList): the text that is displayed in the
 # properties pane when there are no properties to display.
+emptyPropertiesList=Pas cap de proprietat d'afichar
 
 # LOCALIZATION NOTE (messageRepeats.tooltip2): the tooltip text that is displayed
 # when you hover the red bubble that shows how many times a message is repeated
@@ -203,3 +209,11 @@ propertiesFilterPlaceholder=Proprietats del filtre
 # #1 number of message repeats
 # example: 3 repeats
 messageRepeats.tooltip2=Repetit #1 còp;Repetit #1 còps
+
+# LOCALIZATION NOTE (openNodeInInspector): the text that is displayed in a
+# tooltip when hovering over the inspector icon next to a DOM Node in the console
+# output
+openNodeInInspector=Clicar per seleccionar lo nosèl dins l'inspector
+
+# LOCALIZATION NOTE (cdFunctionInvalidArgument): the text that is displayed when
+# cd() is invoked with an invalid argument.
