[oc] update from Pootle (firefox)

--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -28,6 +28,7 @@ xpinstallPromptAllowButton.accesskey=A
 xpinstallDisabledMessageLocked=L'installacion de programas es estada desactivada per l'administrator de vòstre sistèma.
 xpinstallDisabledMessage=L'installacion de programas es desactivada. Clicatz sus Activar puèi tornatz ensajar.
 xpinstallDisabledButton=Activar
+xpinstallDisabledButton.accesskey=v
 
 # LOCALIZATION NOTE (addonDownloading, addonDownloadCancelled, addonDownloadRestart):
 # Semicolon-separated list of plural forms. See:
@@ -73,6 +74,7 @@ lwthemeInstallRequest.allowButton.accesskey=a
 
 lwthemePostInstallNotification.message=Un tèma novèl s'es installat.
 lwthemePostInstallNotification.undoButton=Anullar
+lwthemePostInstallNotification.undoButton.accesskey=A
 lwthemePostInstallNotification.manageButton=Gerir los tèmas…
 lwthemePostInstallNotification.manageButton.accesskey=G
 
@@ -87,6 +89,7 @@ lwthemeNeedsRestart.accesskey=R
 # #1 is brandShortName and #2 is the number of pop-ups blocked.
 popupWarning.message=#1 a empachat aqueste site de dobrir una fenèstra popup.;#1 a empachat aqueste site de dobrir #2 fenèstras popup.
 popupWarningButton=Opcions
+popupWarningButton.accesskey=O
 popupWarningButtonUnix=Preferéncias
 popupWarningButtonUnix.accesskey=P
 popupAllow=Autorizar las fenèstras sorgissentas de %S
@@ -97,8 +100,16 @@ popupShowPopupPrefix=Visualizar '%S'
 
 # missing plugin installer
 installPlugin.message = Volètz installar lo plugin necessari per afichar totes los elements d'aquesta pagina ?
+installPlugin.button.label=Installar %S
+installPlugin.button.accesskey=I
+installPlugin.ignoreButton.label=Demandar pas mai
+installPlugin.ignoreButton.accesskey=n
 
 crashedpluginsMessage.title=Lo plugin %S a plantat.
+crashedpluginsMessage.reloadButton.label=Actualizar la pagina
+crashedpluginsMessage.reloadButton.accesskey=A
+crashedpluginsMessage.submitButton.label=Mandar un rapòrt de fracàs
+crashedpluginsMessage.submitButton.accesskey=M
 crashedpluginsMessage.learnMore=Ne saber mai…
 
 ## Plugin doorhanger strings
@@ -135,9 +146,15 @@ pluginInfo.unknownPlugin=Desconegut
 # LOCALIZATION NOTE (pluginActivateNow.label): This button will enable the
 # plugin in the current session for an short time (about an hour), auto-renewed
 # if the site keeps using the plugin.
+pluginActivateNow.label=Autorizar ara
+pluginActivateNow.accesskey=t
 # LOCALIZATION NOTE (pluginActivateAlways.label): This button will enable the
 # plugin for a long while (90 days), auto-renewed if the site keeps using the
 # plugin.
+pluginBlockNow.label=Blocar lo plugin
+pluginBlockNow.accesskey=B
+pluginContinue.label=Daissar activat
+pluginContinue.accesskey=D
 
 # in-page UI
 PluginClickToActivate=Activar %S.
@@ -145,8 +162,12 @@ PluginVulnerableUpdatable=Aqueste plugin es vulnerable e deu èsser mes a jorn.
 PluginVulnerableNoUpdate=Aqueste plugin possedís de falhas de seguretat.
 
 # infobar UI
+pluginContinueBlocking.label=Contunhar lo blocatge
+pluginContinueBlocking.accesskey=b
 # LOCALIZATION NOTE (pluginActivateTrigger): Use the unicode ellipsis char, \u2026,
 # or use "..." if \u2026 doesn't suit traditions in your locale.
+pluginActivateTrigger.label=Autorizar...
+pluginActivateTrigger.accesskey=A
 
 # Sanitize
 # LOCALIZATION NOTE (sanitizeDialog2.everything.title): When "Time range to
@@ -170,6 +191,8 @@ sanitizeSelectedWarning=Tot l'istoric serà escafat.
 
 # LOCALIZATION NOTE (downloadAndInstallButton.label): %S is replaced by the
 # version of the update: "Update to 28.0".
+update.downloadAndInstallButton.label=Metre a jorn %S
+update.downloadAndInstallButton.accesskey=M
 
 # RSS Pretty Print
 feedShowFeedNew=S'abonar a « %S »…
@@ -440,13 +463,23 @@ getUserMedia.noAudio.label = Pas cap d'àudio
 getUserMedia.sharingCamera.message2 = Actualament, partejatz vòstra webcam amb aquesta pagina.
 getUserMedia.sharingMicrophone.message2 = Actualament, partejatz vòstra webcam amb aquesta pagina.
 getUserMedia.sharingCameraAndMicrophone.message2 = Actualament, partejatz vòstra webcam e vòstre microfòn amb aquesta pagina.
+getUserMedia.stopSharing.label = Arrestar lo partiment
+getUserMedia.stopSharing.accesskey = s
 
 # Mixed Content Blocker Doorhanger Notification
 # LOCALIZATION NOTE - %S is brandShortName
 mixedContentBlocked.message = %S a blocat de contengut pas securizat.
+mixedContentBlocked.keepBlockingButton.label = Contunhar lo blocatge
+mixedContentBlocked.keepBlockingButton.accesskey = b
+mixedContentBlocked.unblock.label = Desactivar la proteccion per aquesta pagina
+mixedContentBlocked.unblock.accesskey = D
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = %S sembla lent… d'… aviar.
+slowStartup.helpButton.label = Descobrir cossí l'accelerar
+slowStartup.helpButton.accesskey = l
+slowStartup.disableNotificationButton.label = M'avertir pas mai
+slowStartup.disableNotificationButton.accesskey = a
 
 
 # LOCALIZATION NOTE(customizeTips.tip0): %1$S will be replaced with the text defined
