--- a/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -30,6 +30,7 @@ developer-button.label = Desvolopaire
 developer-button.tooltiptext = Aisinas de desvolopament web (%S)
 
 sidebar-button.label = Panèl lateral
+sidebar-button.tooltiptext = Afichar los panèls laterals
 
 add-ons-button.label = Moduls complementaris
 # LOCALIZATION NOTE(add-ons-button.tooltiptext2): %S is the keyboard shortcut
