--- a/browser/chrome/browser/devtools/gcli.properties
+++ b/browser/chrome/browser/devtools/gcli.properties
@@ -244,6 +244,8 @@ disconnectOutstanding=Requèstas en cors (%S)
 
 # LOCALIZATION NOTE (globalDesc, globalWindowDesc, globalOutput): These
 # strings describe the 'global' command and its parameters
+globalWindowDesc=Lo novèl window/global
+globalOutput=Lo global JS es ara %S
 
 # LOCALIZATION NOTE: These strings describe the 'clear' command
 
