--- a/browser/chrome/browser/devtools/webconsole.properties
+++ b/browser/chrome/browser/devtools/webconsole.properties
@@ -119,6 +119,7 @@ timeEnd=%1$S: %2$Sms
 
 # LOCALIZATION NOTE (noCounterLabel): this string is used to display
 # count-messages with no label provided.
+noCounterLabel=<sens etiqueta>
 
 # LOCALIZATION NOTE (Autocomplete.blank): this string is used when inputnode
 # string containing anchor doesn't matches to any property in the content.
@@ -128,6 +129,7 @@ maxTimersExceeded=Lo nombre maximal de minutadors permeses sus aquesta pagina es
 
 # LOCALIZATION NOTE (maxCountersExceeded): Error message shown when the maximum
 # number of console.count()-counters was exceeded.
+maxCountersExceeded=Lo nombre maximal de comptadors permeses sus aquesta pagina es estat depassat.
 
 # LOCALIZATION NOTE (JSTerm.updateNotInspectable): this string is used when
 # the user inspects an evaluation result in the Web Console and tries the
