--- a/browser/chrome/browser/places/places.properties
+++ b/browser/chrome/browser/places/places.properties
@@ -24,10 +24,19 @@ bookmarksLivemarkFailed=Impossible de cargar lo marcapaginas dinamic.
 menuOpenLivemarkOrigin.label=Dobrir "%S"
 
 sortByName=Triar '%S' per nom
+sortByNameGeneric=Triada per nom
 # LOCALIZATION NOTE (view.sortBy.1.name.label): sortBy properties are versioned.
 # When any of these changes, all of the properties must be bumped, and the
 # change must be annotated here.  Both label and accesskey must be updated.
 # - version 1: changed view.sortBy.1.date.
+view.sortBy.1.name.label=Triar per nom
+view.sortBy.1.name.accesskey=n
+view.sortBy.1.url.label=Triar per emplaçament
+view.sortBy.1.url.accesskey=l
+view.sortBy.1.date.label=Triat dempuèi la darrièra visita
+view.sortBy.1.date.accesskey=v
+view.sortBy.1.visitCount.label=Triar per nombre de visitas
+view.sortBy.1.visitCount.accesskey=n
 
 searchBookmarks=Recercar dins los marcapaginas
 searchHistory=Recercar dins l'istoric
