--- a/dom/chrome/security/csp.properties
+++ b/dom/chrome/security/csp.properties
@@ -30,6 +30,7 @@ ignoringUnknownOption = L'opcion desconeguda « %1$S » es estada ignorada.
 reportURInotHttpsOrHttp2 = L'URI del rapòrt (%1$S) deu èsser de tipe HTTP o HTTPS.
 # LOCALIZATION NOTE (reportURInotInReportOnlyHeader):
 # %1$S is the ETLD of the page with the policy
+reportURInotInReportOnlyHeader = Aqueste site (%1$S) possedís una politica Report-Only sens URI de rapòrt. CSP blocarà pas aquesta politica e poirà pas raportar sas violacions.
 # LOCALIZATION NOTE (pageCannotSendReportsTo):
 # %1$S is the URI of the page with the policy
 # %2$S is the report URI that could not be used
@@ -56,6 +57,7 @@ inlineStyleBlocked = Una temptativa d'aplicacion de fuèlhs d'estil embarcats es
 scriptFromStringBlocked = Una temptativa d'apèl JavaScript dempuèi una cadena de caractèrs (en apelant una foncion coma « eval ») es estada blocada
 # LOCALIZATION NOTE (hostNameMightBeKeyword):
 # %1$S is the hostname in question and %2$S is the keyword
+hostNameMightBeKeyword = %1$S es estat interpretat coma un nom d'òste e non pas coma un mot clau. Se s'agissiá vertadièrament d'un mot clau, utilizatz '%2$S' (enrodat d'apostròfas).
 
 # CSP Errors:
 policyURINotAlone = La directiva « policy-uri » pòt solament aparéisser sola
