--- a/browser/chrome/browser/devtools/styleeditor.properties
+++ b/browser/chrome/browser/devtools/styleeditor.properties
@@ -66,15 +66,19 @@ saveStyleSheet.commandkey=S
 
 # LOCALIZATION NOTE  (showOriginalSources.label): This is the label on the context
 # menu item to toggle showing original sources in the editor.
+showOriginalSources.label=Afichar las fonts originalas
 
 # LOCALIZATION NOTE  (showOriginalSources.accesskey): This is the access key for
 # the menu item to toggle showing original sources in the editor.
+showOriginalSources.accesskey=o
 
 # LOCALIZATION NOTE  (showCSSSources.label): This is the label on the context
 # menu item to toggle back to showing only CSS sources in the editor.
+showCSSSources.label=Afichar las fonts CSS
 
 # LOCALIZATION NOTE  (showCSSSources.accesskey): This is the access key for the
 # menu item to toggle back to showing only CSS sources in the editor.
+showCSSSources.accesskey=C
 
 # LOCALIZATION NOTE (ToolboxStyleEditor.label):
 # This string is displayed in the title of the tab when the style editor is
