--- a/browser/chrome/browser/sitePermissions.properties
+++ b/browser/chrome/browser/sitePermissions.properties
@@ -10,6 +10,7 @@ alwaysAsk = Demandar totjorn
 permission.cookie.label = Definir de cookies
 permission.desktop-notification.label = Utilizar las notificacions
 permission.image.label = Cargar los imatges
+permission.camera.label = Utilizar la camèra
 permission.install.label = Installacion de modul
 permission.popup.label = Dobrir de fenèstras sorgissentas
 permission.geo.label = Accedir a vòstra posicion
