--- a/dom/chrome/accessibility/AccessFu.properties
+++ b/dom/chrome/accessibility/AccessFu.properties
@@ -3,6 +3,8 @@
 # You can obtain one at http://mozilla.org/MPL/2.0/.
 
 # Screen reader started/stopped
+screenReaderStarted = Lector d'ecran aviat
+screenReaderStopped = Lector d'ecran arrestat
 
 # Roles
 menubar        =       barra de menús
