--- a/services/sync/sync.properties
+++ b/services/sync/sync.properties
@@ -17,6 +17,8 @@ remote.notification.label = Los onglets recents del burèu seràn disponibles ap
 
 error.login.title = Error al moment de l'identificacion
 error.login.description = Sync a rencontrat una error al moment de la connexion : %1$S. Tornatz ensajar encara un còp.
+error.login.prefs.label = Preferéncias...
+error.login.prefs.accesskey = P
 # should decide if we're going to show this
 error.logout.title = Error al moment de la desconnexion
 error.logout.description = Sync a rencontrat una error al moment de la connexion. Probablament qu'es pas res de grèu e cap  d'accion es pas requesida.
@@ -25,10 +27,24 @@ error.sync.description = Sync a rencontrat una error al moment de la sincronizac
 error.sync.prolonged_failure = La sincronizacion a pas pogut èsser efectuada al cors dels %1$S darrièrs jorns. Verificatz vòstra configuracion de ret.
 error.sync.no_node_found = Lo servidor Sync es ocupat pel moment, mas cap d'accion es  pas requesida. Sync ensajarà de sincronizar vòstras donadas tre que possible !
 error.sync.no_node_found.title = Retard de sincronizacion
+error.sync.serverStatusButton.label = Estat del servidor
+error.sync.serverStatusButton.accesskey = v
 error.sync.needUpdate.description = Vos cal metre a jorn Firefox Sync per contunhar de sincronizar vòstras donadas.
+error.sync.needUpdate.label = Metre a jorn Firefox Sync
+error.sync.needUpdate.accesskey = M
+error.sync.tryAgainButton.label = Sincronizar ara
+error.sync.tryAgainButton.accesskey = S
 warning.sync.quota.label = Lo quota del servidor es pròche
 warning.sync.quota.description = Sètz pròche del quota del servidor. Reevaluatz las diferentas donadas de sincronizar.
 error.sync.quota.label = Quota del servidor depassat
 error.sync.quota.description = La sincronizacion a fracassat perque lo quota del servidor es depassat. Reevaluatz las diferentas donadas de sincronizar.
+error.sync.viewQuotaButton.label = Afichar lo quota
+error.sync.viewQuotaButton.accesskey = f
+warning.sync.eol.label = Arrèst del servici
 # %1: the app name (Firefox)
+warning.sync.eol.description = Vòstre servici Firefox Sync serà lèu indisponible. Metètz a jorn %1$S per contunhar de sincronizar vòstras donadas.
+error.sync.eol.label = Servici indisponible
 # %1: the app name (Firefox)
+error.sync.eol.description = Vòstre servici Firefox Sync es pas mai disponible. Vos cal metre a jorn %1$S per contunhar de sincronizar vòstras donadas.
+sync.eol.learnMore.label = Ne saber mai…
+sync.eol.learnMore.accesskey = N
