--- a/toolkit/chrome/global/aboutSupport.properties
+++ b/toolkit/chrome/global/aboutSupport.properties
@@ -9,6 +9,7 @@
 # LOCALIZATION NOTE (crashesTimeMinutes): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 number of minutes (between 1 and 59) which have passed since the crash
+crashesTimeMinutes=I a #1 minuta;I a #1 minutas
 
 # LOCALIZATION NOTE (crashesTimeHours): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
